--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@dabu/vue3-amap": "^0.0.16-beta.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.0",
     "echarts": "^5.4.3",
     "element-plus": "^2.4.2",
+    "html2object": "^1.0.6",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "screenfull": "^6.0.2",
     "vue": "^3.3.4",
     "vue-echarts": "^6.6.1",
     "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0",
     "vxe-table": "^4.5.13",
     "vxe-table-plugin-element": "^3.1.1",
     "vxe-table-plugin-menus": "^3.2.1",
@@ -26,6 +31,10 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "@types/amap-js-api": "^1.4.16",
+    "@types/amap-js-api-autocomplete": "^1.4.4",
+    "@types/amap-js-api-geocoder": "^1.4.4",
+    "@types/amap-js-api-place-search": "^1.4.4",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/tsconfig": "^0.4.0",
