--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,10 +5,9 @@
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*"
+    "playwright.config.*",
+    "plugins/**/*.ts"
   ],
-
-  
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
